<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/encabe"
        android:textSize="20dp"

        />

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnform"
        android:id="@+id/btnform"
        android:textSize="13dp"
        android:background="@color/colorPrimary"

        />

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/btnbbdd"
        android:id="@+id/btnbbdd"
        android:textSize="13dp"
        android:background="@color/colorPrimary"

        />

    <Button
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="440dp"
        android:text="@string/btnemail"
        android:id="@+id/btnemail"
        android:textSize="13dp"
        android:background="@color/colorPrimary"


        />




</LinearLayout>